[workspace]
members = [
	"bee-api/bee-rest-api",
	"bee-ledger",
	"bee-message",
	"bee-network",
	"bee-node",
	"bee-peering",
	"bee-pow",
	"bee-protocol",
	"bee-snapshot",
	"bee-storage/bee-storage-rocksdb",
	"bee-tangle",
	"bee-test",
]

[patch.crates-io]
rocksdb = { git = "https://github.com/hdevalence/rust-rocksdb", branch = "master" }
