[workspace]
members = [
	"bee-api/bee-rest-api",
	"bee-ledger",
	"bee-message",
	"bee-network",
	"bee-node",
	"bee-pow",
	"bee-protocol",
	"bee-snapshot",
	"bee-storage/bee-storage-rocksdb",
	"bee-tangle",
	"bee-test",
	"bee-vote",
]

[patch.crates-io]
rocksdb = { git = "https://github.com/hdevalence/rust-rocksdb", branch = "master" }
