[package]
name = "bee-vote"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "message"]
homepage = "https://www.iota.org"

[dependencies]
flume = "0.10.2"
futures = "0.3.13"
rand = "0.8.3"
thiserror = "1.0"
tokio = { version = "1.3.0", features = ["macros", "rt", "sync", "time"] }
